# mini_project

./: .gitignore  DATA_LEAKAGE_ANALYSIS.md  FIX_AND_RERUN_GUIDE.md  IMPROVEMENTS.md  MIGRATION_NOTES.md  README.md  REPORT.md  REPORT_UPDATE_SUMMARY.md  WORKFLOW_GUIDE.md  pyproject.toml  run.sh  update_imports.py
artifacts/: model_comparison_results.csv
notebooks/: 01_data_glance.ipynb
results/: README.md
results/baseline_models/: cv_results_all_folds.csv  cv_results_summary.csv  outsample_results.csv  training_report.md
results/feature_selection/: comprehensive_performance_report.csv
results/lasso_analysis/: lasso_all_fold_details.csv  lasso_bottom_10pct_ic_pearson_fold_matrix.csv  lasso_bottom_1pct_ic_pearson_fold_matrix.csv  lasso_bottom_5pct_ic_pearson_fold_matrix.csv  lasso_ic_pearson_fold_matrix.csv  lasso_ic_spearman_fold_matrix.csv  lasso_stability_metrics.csv  lasso_top_10pct_ic_pearson_fold_matrix.csv  lasso_top_1pct_ic_pearson_fold_matrix.csv  lasso_top_5pct_ic_pearson_fold_matrix.csv
results/lightgbm_tuning/: best_params.txt  lightgbm_all_fold_details.csv  top10_param_combinations.csv
results/target_analysis/: regression_justification.csv  target_analysis_report.md  unique_values_detail.csv
src/: README.md  cross_validation.py  feature_selection_comparison.py  lasso_analysis.py  lasso_trainer.py  lightgbm_trainer.py  modeling_pipeline.py  run_eda.py  run_feature_selection.py  train_models.py  unique_values_analysis.py  visualization.py
src/s01_data_analysis/: data_loader.py  detailed_eda.py  target_variable_analysis.py  ydata_eda.py  (+1 more)
(+20 files in other folders)
