[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "ydata-profiling>=4.17.0",
]
